fix adaptation&dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,17 +56,22 @@
 }
 #dwBanner1{
     width: 100%;
-    height: 500px;
+    height: auto;
+    
 }
 .dwBody{
     width: 100%;
     height: 1200px;
+   
 }
 
-
+.needFlex{
+    display: flex;
+    align-items: center;
+}
 
 #dwFinalDetail{
-
+   
 font-family: Muli;
 font-style: normal;
 font-weight: 300;
